# flask_tutorial

./: .dockerignore  .env.example  .flake8  .gitignore  DOCKER.md  Dockerfile  GITHUB_UPLOAD_STEPS.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  wsgi.py
.github/workflows/: pylint.yml
app/: __init__.py  celery_app.py  connexion_app.py  tasks.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  health.py  tasks.py  users.py
app/config/: __init__.py  base.py  development.py  production.py  testing.py
app/models/: user.py
app/services/: __init__.py  auth_service.py  user_service.py
app/utils/: auth_decorator.py  jwt_utils.py
docs/: API_VERSIONING.md  AUTH.md  DOCKER.md  GITHUB_SETUP.md
migrations/: env.py
migrations/versions/: 9709973b9429_add_user_table.py  add_password_hash_to_user.py  add_role_to_user.py  bfd3b221c5be_initial_migration.py  ddd2e1fb1067_add_admin_table.py
openapi/: openapi.yaml
tests/: conftest.py  test_auth.py  test_auth_decorator.py  test_health.py  test_tasks.py  test_users.py
